--- a/handle/full.html
+++ b/handle/full.html
@@ -50,11 +50,18 @@
       </tr>
     </table>
   </div>
+  <div>
+    <span><a href="./json">json</a></span>
+    <span><a href="./xml">xml</a></span>
+    <span><a href="/">plain</a></span>
+    <span><a href="/short">short</a></span>
+    <span><a href="/version"><small>version</small></a></span>
+  </div>
 </main>
 <script>
     window.onload = function () {
         setTimeout(function () {
-            document.getElementById('ip').style.opacity = '0.3';
+            document.getElementById('ip').style.opacity = '0.2';
         }, 0);
     };
 </script>
